<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bjfdkj.singlecsl.activity.FingerprintActivity">
    <!--出库
    com.zk.zhinengguizi.activity.FingerprintActivity
    -->
    <LinearLayout
        android:id="@+id/top_manage"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/shenggreen"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fingerprint_Btnback"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@mipmap/left_backz"
            android:gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:text="指纹验证"
            android:textColor="@color/ltgray"
            android:textSize="@dimen/stylesizecenter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/fingerprint_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/fingerprint_guide_tip"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@id/fingerprint_guide"
            android:layout_centerHorizontal="true"
            android:text="@string/fingerprint_recognition_guide_tip"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fingerprint_guide_tip1"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@id/fingerprint_guide"
            android:layout_centerHorizontal="true"
            android:text="您还没有录制指纹，请录入！请录入不同的三次指纹"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <Button
            android:id="@+id/fingerprint_recognition_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fingerprint_guide_tip"
            android:layout_marginTop="10dp"
            android:text="@string/fingerprint_recognition_start" />

        <Button
            android:id="@+id/fingerprint_recognition_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fingerprint_recognition_start"
            android:layout_marginTop="10dp"
            android:text="@string/fingerprint_recognition_cancel" />

        <Button
            android:id="@+id/fingerprint_recognition_sys_unlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fingerprint_recognition_cancel"
            android:layout_marginTop="10dp"
            android:text="开始指纹录入" />

        <Button
            android:id="@+id/fingerprint_recognition_sys_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fingerprint_recognition_sys_unlock"
            android:layout_marginTop="10dp"
            android:text="取消指纹录入" />
    </LinearLayout>
</LinearLayout>
